# BFieldModels_Public

./: .gitignore  BFieldModels.h  CMakeLists.txt  Loop.cpp  README.md  Shell.cpp  Tube.cpp  main.cpp  mcDTubeSupportClass.cpp  mirrorModels.cpp
BinFiles/: penielse@128.141.209.206
include/: BFieldModels.h  Loop.h  PhysicsConstants.hpp  Shell.h  Tube.h  mathFuncs.h  mcDTubeSupportClass.h  mirrorModels.h  utils.h
mains/: fitMagnetParams.cpp  main.cpp  testSingleFunction.cpp
src/: BFieldModels.cpp  Loop.cpp  Shell.cpp  Tube.cpp  mathFuncs.cpp  mcDTubeSupportClass.cpp  utils.cpp
